appId: com.tugbasanver.pillmind
---
- launchApp:
    clearState: false

- runFlow:
    when:
      visible:
        id: "onboarding-skip-button"
    commands:
      - tapOn:
          id: "onboarding-skip-button"

- runFlow:
    when:
      visible:
        id: "signup-open-signin-link"
    commands:
      - tapOn:
          id: "signup-open-signin-link"

- runFlow:
    when:
      visible:
        id: "signin-submit-button"
    commands:
      - tapOn:
          id: "signin-submit-button"

- extendedWaitUntil:
    visible:
      id: "tab-today"
    timeout: 25000

- tapOn:
    id: "tab-my-meds"
- assertVisible:
    text: "(İlaçlarım|My Meds|My medication|No medications found|İlacınız bulunmamaktadır)"

- tapOn:
    id: "tab-add-meds"
- assertVisible:
    text: "^(Medication Name|İlaç Adı)$"

- tapOn:
    id: "tab-settings"
- assertVisible:
    text: "^(Settings|Ayarlar)$"

- tapOn:
    id: "tab-today"
- assertVisible:
    id: "tab-today"
